Sistemati warning del compilatore e aggiornato a javafx 26